Corrigir erro video youtube 03

--- a/html/exibir-video-youtuber.html
+++ b/html/exibir-video-youtuber.html
@@ -3,7 +3,6 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -70,10 +69,10 @@
           <div class="areaDoVídeo">
             <pre>
 &lt;object width="426" height="240"&gt;
-  &lt;param name="movie" value="http://www.youtube.com/v/-TdbsZg6CC4"&gt;&lt;/param&gt;
+  &lt;param name="movie" value="https://www.youtube.com/v/-TdbsZg6CC4"&gt;&lt;/param&gt;
   &lt;param name="allowFullScreen" value="true"&gt;&lt;/param&gt;
   &lt;param name="allowscriptaccess" value="always"&gt;&lt;/param&gt;
-  &lt;embed src="http://www.youtube.com/v/-TdbsZg6CC4"
+  &lt;embed src="https://www.youtube.com/v/-TdbsZg6CC4"
     type="application/x-shockwave-flash"
     allowscriptaccess="always"
     allowfullscreen="true"
