Corrigindo responsividade do modo mobile

--- a/css/efeito-borrado/efeito-borrado.html
+++ b/css/efeito-borrado/efeito-borrado.html
@@ -12,11 +12,11 @@
   <body>
     <main>
       <section>
-        Efeito borrado: Normal.
+        <p>Efeito borrado: Normal.</p>
         <div class="my-bg-1 espaco" ></div>
       </section>
       <section>
-        Efeito borrado: Localizado na imagem.
+        <p>Efeito borrado: localizado em uma posição da foto.</p>
         <div class="my-bg-2 espaco" ></div>
       </section>
     </main>
