--- a/_cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-não-sabe-nada-de-HTML5/www.gabrielf7.tk/index.html
+++ b/_cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-não-sabe-nada-de-HTML5/www.gabrielf7.tk/index.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/index.css">
     <title>Entrada | Perfil</title>
   </head>
 
   <body>
     <h1>Perfil Social</h1>
 
-    <p>Acesse esse contéudo de outra forma:</p>
-    <a href="https://www.gabrielf7.tk/" target="_blank" rel="external">@Gabrielf7/Drive</a>
-    <a href="http://gabrielf7.netlify.app" target="_blank" rel="external">@Gabrielf7/Netlify</a>
+    <h2>Acesse esse contéudo de outra forma:</h2>
+    <div class="linksConteudo">
+      <a id="linkperfil1" href="https://www.gabrielf7.tk/" target="_blank" rel="external">@Gabrielf7/<strong>Drive</strong></a>
+      <a id="linkperfil2" href="https://gabrielf7.ga" target="_blank" rel="external">@Gabrielf7/<strong>Netlify</strong></a>
+    </div>
 
     <h2>Quem sou eu?</h2>
     <img src="./src/perfil.png" alt="Foto de Perfil">
