Corrir texto do conteudo do curso hml5

--- a/cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-nao-sabe-nada-de-HTML5/gabrielf7/gabrielf7.html
+++ b/cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-nao-sabe-nada-de-HTML5/gabrielf7/gabrielf7.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Perfil Social</h1>
 
-    <h2>Acesse esse contéudo de outra forma:</h2>
+    <h2>Acesse esse conteúdo hospedado em outras plataformas:</h2>
     <div class="linksConteudo">
       <a id="linkperfil1" href="https://www.gabrielf7.tk/" target="_blank" rel="external">@Gabrielf7/<strong>Drive</strong></a>
       <a id="linkperfil2" href="https://gabrielf7.ga" target="_blank" rel="external">@Gabrielf7/<strong>Netlify</strong></a>
