Add: informar local hospedado

--- a/cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-nao-sabe-nada-de-HTML5/gabrielf7/gabrielf7.html
+++ b/cursos/HTML5CSS3-na-pratica-02-Curso-HTML5-para-quem-nao-sabe-nada-de-HTML5/gabrielf7/gabrielf7.html
@@ -11,7 +11,10 @@
   </head>
 
   <body>
-    <h1>Perfil Social</h1>
+    <div class="localDoSite">
+      <h1>Perfil Social</h1>
+      <h2>Hospedado no GitHub</h2>
+    </div>
 
     <h2>Acesse esse conteúdo hospedado em outras plataformas:</h2>
     <div class="linksConteudo">
