--- a/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/desafios/desafios10/index.html
+++ b/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/desafios/desafios10/index.html
@@ -33,10 +33,10 @@
         <div class="destaque">
           <h3 class="assunto-sub-titulo">A primeira versão</h3>
         </div>
-        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <span><a href="https://professorguanabara.github.io/projeto-android/" target="_blank" rel="nofollow">Dan Morrill &#x1F517</a></span>. Ele conta que abriu o <span><a href="https://inkscape.org/" target="_blank" rel="nofollow">Inkscape &#x1F517</a></span> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <span class="destaque-intenso"><a href="https://professorguanabara.github.io/projeto-android/" target="_blank" rel="nofollow">Dan Morrill &#x1F517</a></span>. Ele conta que abriu o <span class="destaque-intenso"><a href="https://inkscape.org/" target="_blank" rel="nofollow">Inkscape &#x1F517</a></span> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
         </p>
         <picture>
-          <source media="(max-width: 750px)" srcset="./imagens/dan-droids-pq.png" type="image/jpg">
+          <source media="(max-width: 800px)" srcset="./imagens/dan-droids-pq.png" type="image/jpg">
           <img src="./imagens/dan-droids.png" alt="Versão de Robô criada pelo Dan Morrill">
         </picture>
         <p>
@@ -45,10 +45,10 @@
         <div class="destaque">
           <h3 class="assunto-sub-titulo">Surge um novo mascote</h3>
         </div>
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <span><a href="https://www.irinablok.com/" target="_blank" rel="nofollow">Irina Blok &#x1F517</a></span>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <span class="destaque-intenso"><a href="https://www.irinablok.com/" target="_blank" rel="nofollow">Irina Blok &#x1F517</a></span>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
         </p>
         <picture>
-          <source media="(max-width: 750px)" srcset="./imagens/irina-blok-pq.jpg" type="image/jpg">
+          <source media="(max-width: 800px)" srcset="./imagens/irina-blok-pq.jpg" type="image/jpg">
           <img src="./imagens/irina-blok.jpg" alt="Foto da ilustradora Russa Irina Blok">
         </picture>
         <p>
@@ -70,7 +70,42 @@
       </section>
 
       <section>
-        <h3>[Extra]</h3>
+        <div class="extra">
+          <div class="extra-top">
+            <h3>Quer aprender mais?</h3>
+          </div>
+
+          <div class="extra-conteudo">
+            <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
+
+            <div>
+              <ul class="ul-rtl">
+                <li class="item">1.5 - Cupcake</li>
+                <li class="item">1.6 - Donut</li>
+                <li class="item">3.0 - Eclair</li>
+                <li class="item">2.2 - Froyo</li>
+                <li class="item">2.3 - Gingerbread</li>
+                <li class="item">3.0 - Honeycomb</li>
+                <li class="item">4.0 - Ice Cream Sandwich</li>
+              </ul>
+              <ul>
+                <li class="item">4.1 - Jelly Bean</li>
+                <li class="item">4.4 - KitKat</li>
+                <li class="item">5.0 - Lolipop</li>
+                <li class="item">6.0 - Marshmallow</li>
+                <li class="item">7.0 - Nougat</li>
+                <li class="item">8.0 - Oreo</li>
+                <li class="item">9.0 - Pie</li>
+              </ul>
+            </div>
+
+            <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+            </p>
+            <p>Acesse aqui o site <span class="destaque-invertido"><a href="https://www.android.com/intl/pt-BR_br/history/"  target="_blank" rel="nofollow">Android History &#x1F517</a></span> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+          </div>
+        </div>
+
+        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
       </section>
     </main>
     <footer>
