--- a/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/cap-13-17/Cap17-android/android.html
+++ b/cursos/HTML5CSS3-na-pratica-01-Curso-em-Video/Módulo-02/cap-13-17/Cap17-android/android.html
@@ -34,7 +34,7 @@
           <div class="destaque">
             <h2 class="assunto-sub-titulo">A primeira versão</h2>
           </div>
-          <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <span class="destaque-intenso"><a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="nofollow">Dan Morrill &#x1F517</a></span>. Ele conta que abriu o <span class="destaque-intenso"><a href="https://inkscape.org/" target="_blank" rel="nofollow">Inkscape &#x1F517</a></span> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+          <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <span class="destaque-intenso"><a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="nofollow">Dan Morrill</a></span>. Ele conta que abriu o <span class="destaque-intenso"><a href="https://inkscape.org/" target="_blank" rel="nofollow">Inkscape</a></span> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
           </p>
           <picture>
             <source media="(max-width: 800px)" srcset="./imagens/dan-droids-pq.png" type="image/jpg">
@@ -46,7 +46,7 @@
           <div class="destaque">
             <h2 class="assunto-sub-titulo">Surge um novo mascote</h2>
           </div>
-          <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <span class="destaque-intenso"><a href="https://www.irinablok.com/" target="_blank" rel="nofollow">Irina Blok &#x1F517</a></span>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+          <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <span class="destaque-intenso"><a href="https://www.irinablok.com/" target="_blank" rel="nofollow">Irina Blok</a></span>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
           </p>
           <picture>
             <source media="(max-width: 800px)" srcset="./imagens/irina-blok-pq.jpg" type="image/jpg">
@@ -55,15 +55,15 @@
           <p>
             A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
           </p>
-          <picture>
-            <img src="./imagens/bugdroid.png" alt="Imagem do android segurando a mão do ser humano">
-          </picture>
+
+          <img src="./imagens/bugdroid.png" class="pequena" alt="Imagem do android segurando a mão do ser humano">
+          
           <p>
             A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
           </p>
         </section>
         <section class="video-android">
-          <iframe width="720" height="345" src="https://www.youtube-nocookie.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section>
           <aside class="extra">
@@ -72,27 +72,25 @@
             </div>
             <div class="extra-conteudo">
               <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-              <div>
-                <ul class="ul-rtl">
-                  <li class="item">1.5 - <abbr title="Bolo de Copo">Cupcake</abbr></li>
-                  <li class="item">1.6 - <abbr title="Rosquinha">Donut</abbr></li>
-                  <li class="item">3.0 - <abbr title="Bomba">Eclair</abbr></li>
-                  <li class="item">2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
-                  <li class="item">2.3 - <abbr title="Biscoito de Gengibre">Gingerbread</abbr></li>
-                  <li class="item">3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
-                  <li class="item">4.0 - <abbr title="Saunduíche de Sorvete">Ice Cream Sandwich</abbr></li>
-                  <li class="item">4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
-                  <li class="item">4.4 - <abbr title="KitKat">KitKat</abbr></li>
-                  <li class="item">5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
-                  <li class="item">6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
-                  <li class="item">7.0 - <abbr title="Torrone">Nougat</abbr></li>
-                  <li class="item">8.0 - <abbr title="Oreo">Oreo</abbr></li>
-                  <li class="item">9.0 - <abbr title="Torta">Pie</abbr></li>
-                </ul>
-              </div>
+              <ul>
+                <li class="item">1.5 - <abbr title="Bolo de Copo">Cupcake</abbr></li>
+                <li class="item">1.6 - <abbr title="Rosquinha">Donut</abbr></li>
+                <li class="item">3.0 - <abbr title="Bomba">Eclair</abbr></li>
+                <li class="item">2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
+                <li class="item">2.3 - <abbr title="Biscoito de Gengibre">Gingerbread</abbr></li>
+                <li class="item">3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
+                <li class="item">4.0 - <abbr title="Saunduíche de Sorvete">Ice Cream Sandwich</abbr></li>
+                <li class="item">4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
+                <li class="item">4.4 - <abbr title="KitKat">KitKat</abbr></li>
+                <li class="item">5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
+                <li class="item">6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
+                <li class="item">7.0 - <abbr title="Torrone">Nougat</abbr></li>
+                <li class="item">8.0 - <abbr title="Oreo">Oreo</abbr></li>
+                <li class="item">9.0 - <abbr title="Torta">Pie</abbr></li>
+              </ul>
               <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
               </p>
-              <p>Acesse aqui o site <span class="destaque-invertido"><a href="https://www.android.com/intl/pt-BR_br/history/"  target="_blank" rel="nofollow">Android History &#x1F517</a></span> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+              <p>Acesse aqui o site <span class="destaque-invertido"><a href="https://www.android.com/intl/pt-BR_br/history/"  target="_blank" rel="nofollow">Android History</a></span> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </div>
           </aside>
           <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
