Add: Refatoração do index.js principal

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <main>
         <section class="mainEstilo">
           <div class="tituloArea"><abbr title="HyperText Markup Language">HTML</abbr></div>
-          <section id="areaLinkHTML"></section>
+          <section id="areaLink00"></section>
         </section>
         <section class="mainEstilo">
           <div class="tituloArea"><abbr title="Cascading Style Sheets">CSS</abbr></div>
-          <section id="areaLinkCSS"></section>
+          <section id="areaLink01"></section>
         </section>
         <section class="mainEstilo">
           <div class="tituloArea"><abbr title="Cursos sobre HTML e/ou CSS">Cursos</abbr></div>
-          <section id="areaLinkCursos"></section>
+          <section id="areaLink02"></section>
         </section>
       </main>
       
